# lightnet

./: .gitignore  CLAUDE.md  Makefile  README.md  example-network.yaml
cli/: go.mod  go.sum  main.go
cli/cmd/: commands.go  fund.go  info.go  list.go  root.go  start.go  stop.go
cli/commands/: createblocks.go  fund.go  info.go  list.go  nodeexec.go  openchannel.go  start.go  stop.go
cli/config/: loader.go  network.go
cli/docker/: client.go  containers.go  exec.go  images.go  network.go
cli/dockerfiles/: embed.go
cli/dockerfiles/bitcoind/: Dockerfile
cli/dockerfiles/clightning/: Dockerfile
cli/dockerfiles/ldk-server/: Dockerfile  docker-entrypoint.sh  ldk-cli
cli/dockerfiles/lnd/: Dockerfile
cli/nodes/: bitcoind.go  cln.go  ldk.go  lnd.go  node.go
cli/state/: manager.go  types.go
scenarios/: Cargo.toml
scenarios/examples/: bidirectional_payments.rs  channel_scenario.rs  message_exchange.rs  pay_invoices.rs
scenarios/src/: lib.rs
scenarios/src/network/: mod.rs
scenarios/src/nodes/: ldk.rs  lnd.rs  mod.rs
scenarios/src/peer/: mod.rs  transport.rs
