[package]
name = "scenarios"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning = { git = "https://github.com/elnosh/rust-lightning", branch = "expose-peer-channel-encryptor" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
bitcoin = "0.32"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
