[package]
name = "scenarios"
version = "0.1.0"
edition = "2021"

[dependencies]
lightning = { git = "https://github.com/elnosh/rust-lightning", branch = "expose-peer-channel-encryptor" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
bitcoin = "0.32"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LND gRPC — bundles pre-generated tonic stubs, TLS, and macaroon auth
fedimint-tonic-lnd = { version = "0.4", features = ["tls-ring"] }

# LDK REST client (re-exports ldk_server_protos)
ldk-server-client = { git = "https://github.com/lightningdevkit/ldk-server" }

hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"